# beginners-data-workshop

./: 1. Beginning with Python.ipynb  2. First steps with Pandas.ipynb  3.1 Visualization with Matplotlib.ipynb  3.2 Visualization with Seaborn.ipynb  4. More Python basics.ipynb  5. More Pandas.ipynb  README.md  cat.cmd  pyproject.toml
solutions/: 02_02.py  02_32.py  05_02.py  05_04.py  05_06.py  05_36.py
